array.island.Island.scala.error
Erreur de compilation :
Island:5: error: ambiguous reference to overloaded definition,
both method to in class RichInt of type (end: Int, step: Int)scala.collection.immutable.Range.Inclusive
and  method to in class RichInt of type (end: Int)scala.collection.immutable.Range.Inclusive
match expected type ?
  for (i <- 1.to length(num)){
              ^